Updated html and css to show logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrap">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <img id="headerlogo" src="https://terrehbyte.files.wordpress.com/2014/06/inkscape-remix-colorfix-fix.png" href="{{ site.baseurl }}"/>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
