--- a/css/main.css
+++ b/css/main.css
@@ -47,10 +47,16 @@ a:visited { color: #205caa; }
   background-color: white;
 }
 
+#headerlogo {
+  height: 40px;
+  padding-top: 10px;
+  position: relative;
+}
+
 .site-title,
 .site-title:hover,
 .site-title:visited {
-  display: block;
+  display: inline;
   color: #333;
   font-size: 26px;
   letter-spacing: -1px;
@@ -58,6 +64,8 @@ a:visited { color: #205caa; }
   line-height: 56px;
   position: relative;
   z-index: 1;
+  height: 56px;
+  clear: both;
 }
 
 .site-nav {
