Linked logo to homepage

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,9 @@
 
   <div class="wrap">
 
-    <img id="headerlogo" src="https://terrehbyte.files.wordpress.com/2014/06/inkscape-remix-colorfix-fix.png" href="{{ site.baseurl }}"/>
+    <a href="{{ site.baseurl }}">
+      <img id="headerlogo" src="https://terrehbyte.files.wordpress.com/2014/06/inkscape-remix-colorfix-fix.png" href="{{ site.baseurl }}"/>
+    </a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
