Fixed header link and image location

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,9 @@
 
   <div class="wrap">
 
-    <a href="{{ site.baseurl }}">
-      <img id="headerlogo" src="https://terrehbyte.files.wordpress.com/2014/06/inkscape-remix-colorfix-fix.png" href="{{ site.baseurl }}"/>
+    <!--Can someone tell me why "{{ site.baseurl }}/" works vs. "{{ site.baseurl }}"? !-->
+    <a href="{{ site.baseurl }}/">
+      <img id="headerlogo" src="images/hp.png"/>
     </a>
 
     <nav class="site-nav">
