Fixed relative link to homepage logo
The link would be relative to the current page rather than solely to /images/hp.png

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 
     <!--Can someone tell me why "{{ site.baseurl }}/" works vs. "{{ site.baseurl }}"? !-->
     <a href="{{ site.baseurl }}/">
-      <img id="headerlogo" src="images/hp.png"/>
+      <img id="headerlogo" src="{{ site.baseurl}}/images/hp.png"/>
     </a>
 
     <nav class="site-nav">
