--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,24 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
+    <!-- ****** faviconit.com favicons ****** -->
+    <link rel="shortcut icon" href="{{ "/favicon/favicon.ico" | prepend: site.baseurl }}">
+    <link rel="icon" sizes="16x16 32x32 64x64" href="{{ "/favicon.ico" | prepend: site.baseurl }}">
+    <link rel="icon" type="image/png" sizes="196x196" href="{{ "/favicon/favicon-196.png" | prepend: site.baseurl }}">
+    <link rel="icon" type="image/png" sizes="160x160" href="{{ "/favicon/favicon-160.png" | prepend: site.baseurl }}">
+    <link rel="icon" type="image/png" sizes="96x96" href="{{ "/favicon/favicon-96.png" | prepend: site.baseurl }}">
+    <link rel="icon" type="image/png" sizes="64x64" href="{{ "/favicon/favicon-64.png" | prepend: site.baseurl }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ "/favicon/favicon-32.png" | prepend: site.baseurl }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ "/favicon/favicon-16.png" | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="152x152" href="{{ "/favicon/favicon-152.png" | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="144x144" href="{{ "/favicon/favicon-144.png" | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="120x120" href="{{ "/favicon/favicon-120.png" | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="114x114" href="{{ "/favicon/favicon-114.png" | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="76x76" href="{{ "/favicon/favicon-76.png" | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" sizes="72x72" href="{{ "/favicon/favicon-72.png" | prepend: site.baseurl }}">
+    <link rel="apple-touch-icon" href="{{ "/favicon/favicon-57.png" | prepend: site.baseurl }}">
+    <meta name="msapplication-TileColor" content="#FFFFFF">
+    <meta name="msapplication-TileImage" content="{{ "/favicon/favicon-144.png" | prepend: site.baseurl }}">
+    <meta name="msapplication-config" content="{{ "/favicon/browserconfig.xml" prepend: site.baseurl }}">
+    <!-- ****** faviconit.com favicons ****** -->
 </head>
