--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,8 @@
         </svg>
       </a>
       <div class="trigger">
-        {% for page in site.pages %}
+        {% assign navpages = site.pages | sort: 'navbarid' %}
+        {% for page in navpages %}
           {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
         {% endfor %}
       </div>
