Fit post images

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 ---
-
+page-maxwidth: 800px;
+post-maxwidth: 800px;
 ---
-
 
 /* Base */
 /* ----------------------------------------------------------*/
@@ -249,6 +249,11 @@ a:visited { color: #205caa; }
 .post-content ul,
 .post-content ol { padding-left: 20px; }
 
+.post-content img
+{
+  max-width: 100%;
+}
+
 .post pre,
 .post code {
   border: 1px solid #d5d5e9;
@@ -283,6 +288,9 @@ a:visited { color: #205caa; }
 }
 
 .post pre.terminal code { background-color: #333; }
+
+/* Pagination */
+/* ----------------------------------------------------------*/
 
 .pagination
 {
