--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,11 @@ post-maxwidth: 800px;
   padding: 0;
 }
 
+a, p
+{
+  color: white;
+}
+
 html, body { height: 100%; }
 
 body {
@@ -18,7 +23,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   font-weight: 300;
-  background-color: #fdfdfd;
+  background-color: #191919;
 }
 
 h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: 400; }
@@ -49,7 +54,8 @@ a:visited { color: #205caa; }
   border-top: 5px solid #333;
   border-bottom: 1px solid #e8e8e8;
   min-height: 56px;
-  background-color: white;
+  /*background-color: #333;*/
+  background-color: #232323;
 }
 
 #headerlogo {
@@ -150,7 +156,7 @@ a:visited { color: #205caa; }
 
 .page-content {
   padding: 30px 0;
-  background-color: #fff;
+  background-color: #141414;
 }
 
 .page-content img
@@ -169,21 +175,37 @@ a:visited { color: #205caa; }
 
 .posts li { margin-bottom: 30px; }
 
-.posts .post-link {
-  font-size: 24px;
-  letter-spacing: -1px;
-  line-height: 1;
-}
-
-.posts .post-date {
+.posts .post-date
+{
   display: block;
   font-size: 15px;
   color: #818181;
+  margin-bottom: 0.3em;
+}
+
+.posts .post-link
+{
+  position: relative;
+  z-index: 1;
+  font-size: 24px;
+  letter-spacing: -1px;
+  line-height: 1;
+  
+  padding: 0.2em 0.5em;
+  background: #202020;
+  color: #bd63c5;
 }
 
 .posts .post-excerpt
 {
+  position: relative;
+  z-index: 0;
+  left: 1em;
   font-size: 13px;
+  
+  background: #2d2d2d;
+  color: #87d778;
+  padding: 0.5em 0.5em;
 }
 
 
