--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ post-maxwidth: 800px;
 
 a, p
 {
-  color: white;
+  color: gray;
 }
 
 html, body { height: 100%; }
@@ -23,7 +23,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   font-weight: 300;
-  background-color: #191919;
+  background-color: #0e0e0e;
 }
 
 h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: 400; }
@@ -39,9 +39,11 @@ a:visited { color: #205caa; }
 .wrap:after { clear: both; }
 .wrap {
   max-width: 800px;
-  padding: 0 30px;
+  //padding: 0 30px;
   margin: 0 auto;
   zoom: 1;
+  padding: 0em 2em;
+  background-color: #191919;
 }
 
 
@@ -55,7 +57,7 @@ a:visited { color: #205caa; }
   border-bottom: 1px solid #e8e8e8;
   min-height: 56px;
   /*background-color: #333;*/
-  background-color: #232323;
+  //background-color: #232323;
 }
 
 #headerlogo {
@@ -132,6 +134,9 @@ a:visited { color: #205caa; }
   width: calc(41.875%);
 }
 
+/* Page Content styles */
+/* ----------------------------------------------------------*/
+
 .site-footer ul { list-style: none; }
 
 .site-footer li,
@@ -139,6 +144,11 @@ a:visited { color: #205caa; }
   font-size: 15px;
   letter-spacing: -.3px;
   color: #828282;
+}
+
+.site-footer .wrap
+{
+  padding: 30px 30px;
 }
 
 .github-icon-svg,
@@ -155,8 +165,14 @@ a:visited { color: #205caa; }
 /* ----------------------------------------------------------*/
 
 .page-content {
-  padding: 30px 0;
+  padding: 30px 0px;
   background-color: #141414;
+}
+
+.page-content .wrap
+{
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .page-content img
@@ -173,7 +189,11 @@ a:visited { color: #205caa; }
 
 .posts { list-style-type: none; }
 
-.posts li { margin-bottom: 30px; }
+.posts li
+{
+  padding-bottom: 30px;
+  display: block; /*for the future when you might want even/odd coloring for each post entry*/
+}
 
 .posts .post-date
 {
@@ -185,6 +205,7 @@ a:visited { color: #205caa; }
 
 .posts .post-link
 {
+
   position: relative;
   z-index: 1;
   font-size: 24px;
@@ -201,6 +222,7 @@ a:visited { color: #205caa; }
   position: relative;
   z-index: 0;
   left: 1em;
+  margin-right: 2em;
   font-size: 13px;
   
   background: #2d2d2d;
