--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,7 @@
                 c0,0.208,0.14,0.449,0.534,0.373c3.081-1.028,5.302-3.935,5.302-7.362C15.76,3.906,12.285,0.431,7.999,0.431z"/>
               </svg>
             </span>
-            <span class="username">{{ site.github_username }}</span>
+            <a href="https://github.com/{{ site.github_username }}" class="username">{{ site.github_username }}</a>
           </a>
         </li>{% endif %}
         {% if site.twitter_username %}<li>
@@ -46,7 +46,7 @@
                 c6.015,0,9.304-4.983,9.304-9.304c0-0.142-0.003-0.283-0.009-0.423C14.976,4.29,15.531,3.714,15.969,3.058z"/>
               </svg>
             </span>
-            <span class="username">{{ site.twitter_username }}</span>
+            <a href="https://twitter.com/{{ site.twitter_username }}" class="username">{{ site.twitter_username }}</a>
           </a>
         </li>{% endif %}
       </ul>
