--- a/css/main.css
+++ b/css/main.css
@@ -218,7 +218,7 @@ a:visited { color: #205caa; }
   
   padding: 0.2em 0.5em;
   background: #202020;
-  color: #bd63c5;
+  color: #87d778;
 }
 
 .posts .post-excerpt
@@ -230,7 +230,7 @@ a:visited { color: #205caa; }
   font-size: 13px;
   
   background: #2d2d2d;
-  color: #87d778;
+  color: #6871ae;
   padding: 0.5em 0.5em;
 }
 
