--- a/css/main.css
+++ b/css/main.css
@@ -203,6 +203,33 @@ a:visited { color: #205caa; }
 /* Home styles */
 /* ----------------------------------------------------------*/
 
+.showcase
+{
+    position: relative;
+    text-align: justify;
+    margin-bottom: -2em;
+
+}
+
+.showcase > div
+{
+    width: 32%;
+    display: inline-block;
+    vertical-align: top;
+}
+.showcase img
+{
+    max-width: 100%;
+}
+
+.showcase::after
+{
+    text-align: center;
+    content: "";
+    width: 100%;
+    display:inline-block;
+}
+
 .home h1 { margin-bottom: 25px; }
 
 .posts { list-style-type: none; }
