--- a/css/main.css
+++ b/css/main.css
@@ -54,9 +54,11 @@ a:visited { color: #205caa; }
 .wrap {
   max-width: 700px;
   //padding: 0 30px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   zoom: 1;
-  padding: 0em 2em;
+  padding-left: 2em;
+  padding-right: 2em;
   background-color: #191919;
 }
 
@@ -191,6 +193,16 @@ a:visited { color: #205caa; }
 {
   padding-top: 30px;
   padding-bottom: 30px;
+}
+
+.page-content > div
+{
+    margin-bottom: 3em;
+}
+
+.wrap:last-child
+{
+    margin-bottom: 0em;
 }
 
 .page-content img
