--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,3 @@
----
-page-maxwidth: 10em;
-post-maxwidth: 10em;
----
-
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro&subset=latin,latin-ext);
 
 /* Base */
@@ -341,6 +336,11 @@ a:visited { color: #205caa; }
   margin: 40px 0 20px;
   background-color: #1c1c1c;
   padding: 0.125em;
+}
+
+.post-content h1{
+  font-size: 40px;
+  letter-spacing: -1.50px; 
 }
 
 .post-content h2 {
