--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro&subset=latin,latin-ext);
+@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro&subset=latin,latin-ext);
 
 /* Base */
 /* ----------------------------------------------------------*/
