--- a/css/main.css
+++ b/css/main.css
@@ -356,6 +356,7 @@ a:visited { color: #205caa; }
 .post-content h4 {
   font-size: 20px;
   letter-spacing: -1px;
+  margin: 0px;
 }
 
 .post-content blockquote {
