Added rules for <code>

--- a/css/main.css
+++ b/css/main.css
@@ -379,8 +379,9 @@ a:visited { color: #205caa; }
 
 .post pre,
 .post code {
-  border: 1px solid #d5d5e9;
-  background-color: #eef;
+  border: 1px solid #102816;
+  background-color: #102816;
+  color: #cfd4d0;
   padding: 8px 12px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
