--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,12 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Source Sans Pro', sans-serif;
 }
 
+th
+{
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 300;
+}
+
 a         { color: #2a7ae2; text-decoration: none; }
 a:hover   { color: #000; text-decoration: underline; }
 a:visited { color: #205caa; }
@@ -240,8 +246,6 @@ a:visited { color: #205caa; }
     display:inline-block;
 }
 
-.home h1 { margin-bottom: 25px; }
-
 .posts { list-style-type: none; }
 
 .posts li
@@ -277,7 +281,7 @@ a:visited { color: #205caa; }
   
   padding: 0.2em 0.5em;
   background: #202020;
-  color: #87d778;
+  color: rgb(194, 194, 194);
   
 }
 
@@ -290,7 +294,7 @@ a:visited { color: #205caa; }
   font-size: 13px;
   
   background: #2d2d2d;
-  color: #6871ae;
+  color: #999;
   padding: 1em 1em;
 }
 
@@ -429,6 +433,47 @@ a:visited { color: #205caa; }
   display: block;
   vertical-align: text-top;
 }
+
+.projects table
+{
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0.5em;
+  background: #121312;
+}
+
+.projects th
+{
+  padding-left: 0.25em;
+  padding-right: 0.25em;
+}
+
+.projects td
+{
+  text-align: center;
+  background: #292a29;
+  padding-left : 0.25em;
+  padding-right : 0.25em;
+}
+
+/* shitty table columns */
+/*
+.projects tr td
+{
+  border-left: 3px solid white;
+  
+}
+
+.projects tr td:first-child
+{
+  border-left: none;
+}
+
+.projects tr td:last-child
+{
+  border-right: none;
+}
+*/
 
 /* Pagination */
 /* ----------------------------------------------------------*/
