--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ a:visited { color: #205caa; }
 .wrap:after { clear: both; }
 .wrap {
   max-width: 700px;
-  //padding: 0 30px;
+  /*padding: 0 30px;*/
   margin-left: auto;
   margin-right: auto;
   zoom: 1;
@@ -74,7 +74,7 @@ a:visited { color: #205caa; }
   border-bottom: 1px solid #2f2f2f;
   min-height: 56px;
   /*background-color: #333;*/
-  //background-color: #232323;
+  /*background-color: #232323;*/
   background-color: #191919;
 }
 
@@ -110,9 +110,12 @@ a:visited { color: #205caa; }
   margin-left: 20px;
   color: #727272;
   letter-spacing: -.5px;
+  font-size: 1.3em;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 300;
   /* Box Highlight */
-  padding: 0.2em 0.5em;
   background: #202020;
+  padding: 0.2em 0.5em;
 }
 
 /* Site footer */
