--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,5 @@
+{% assign author = site.authors[page.author] %}
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +12,7 @@
     <!--Summary Card-->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@terrehbyte">
-    <meta name="twitter:creator" content="@terrehbyte">
+    <meta name="twitter:creator" content="@{{ author.twitter }}">
     <meta name="twitter:title" content="{% if page.title %}{{ page.title }} | {{ site.title }}{% else %}Terry Nguyen | {{ site.title }}{% endif %}">
     <meta name="twitter:description" content="{{ page.excerpt | strip_html | truncatewords: 50 }}">
     <meta name="twitter:image:src" content="{{ page.bigimage | prepend: site.baseurl | prepend: site.url }}">
@@ -38,7 +40,7 @@
     <meta name="msapplication-TileImage" content="{{ "/favicon/favicon-144.png" | prepend: site.baseurl }}">
     <meta name="msapplication-config" content="{{ "/favicon/browserconfig.xml" prepend: site.baseurl }}">
     <!-- ****** faviconit.com favicons ****** -->
-	
+
 	<!-- Google Analytics -->
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
