Generate gamejam page using json data

--- a/css/main.css
+++ b/css/main.css
@@ -472,6 +472,11 @@ a.darken:hover img
   padding-right : 0.25em;
 }
 
+.projects div
+{
+  display: block
+}
+
 /* shitty table columns */
 /*
 .projects tr td
