--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url(//fonts.googleapis.com/css?family=Source+Sans+Pro&subset=latin,latin-ext);
+@import url('https://fonts.googleapis.com/css?family=Inconsolata|Roboto|Space+Mono');
 
 /* Base Things*/
 /* ----------------------------------------------------------*/
@@ -23,7 +24,7 @@ a, p, span, li, th, td
 html, body { height: 100%; }
 
 body {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Inconsolata', monospace;
   font-size: 14px;
   line-height: 1.5;
   font-weight: 300;
@@ -34,7 +35,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 100%;
   font-weight: 400;
   color: #8c8c7d;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Space Mono', sans-serif;
 }
 
 th
@@ -60,7 +61,6 @@ a:visited { color: #205caa; }
   zoom: 1;
   padding-left: 2em;
   padding-right: 2em;
-  background-color: #191919;
 }
 
 
@@ -70,18 +70,20 @@ a:visited { color: #205caa; }
 /* Site header */
 
 .site-header {
-  border-top: 5px solid #333;
-  border-bottom: 1px solid #2f2f2f;
-  min-height: 56px;
-  /*background-color: #333;*/
-  /*background-color: #232323;*/
-  background-color: #191919;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5em; 
+  margin-bottom: 5em; 
 }
 
 #headerlogo {
   height: 40px;
   padding-top: 10px;
   position: relative;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .site-title,
@@ -100,21 +102,42 @@ a:visited { color: #205caa; }
 }
 
 .site-nav {
-  float: right;
   line-height: 56px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
-.site-nav .menu-icon { display: none; }
+.site-nav .page-link ul {
+  text-align: justify;
+}
+
+.site-nav .page-link ul:after {
+  content: '';
+  display: inline-block;
+  width: 100%;
+}
+
+.site-nav .page-link ul:before {
+  content: '';
+  display: block;
+  margin-top: -1.25em;
+}
+
+.site-nav li {
+  display: inline-block;
+  margin-right: -.25em;
+  position: relative;
+  top: 1.25em;
+}
 
 .site-nav .page-link {
   margin-left: 20px;
   color: #727272;
   letter-spacing: -.5px;
   font-size: 1.3em;
-  font-family: 'Source Sans Pro', sans-serif;
   font-weight: 300;
   /* Box Highlight */
-  background: #202020;
   padding: 0.2em 0.5em;
 }
 
@@ -189,7 +212,7 @@ a:visited { color: #205caa; }
 /* ----------------------------------------------------------*/
 
 .page-content {
-  padding: 3em 2em;
+  padding: 1em 1em;
   background-color: #141414;
 }
 
@@ -266,8 +289,7 @@ a.darken:hover img
 
 .posts li
 {
-  padding-bottom: 3.5em;
-  display: block; /*for the future when you might want even/odd coloring for each post entry*/
+  display: flex; /*for the future when you might want even/odd coloring for each post entry*/
 }
 
 /*
@@ -283,22 +305,17 @@ a.darken:hover img
   font-size: 15px;
   color: #818181;
   margin-bottom: 0.3em;
+  float: left;
 }
 
 .posts .post-link
 {
   display: inline;
   position: relative;
-  z-index: 1;
-  font-size: 1.825em;
-  font-family: 'Source Sans Pro', sans-serif;
   letter-spacing: -1px;
-  line-height: 1.5em;
   
-  padding: 0.2em 0.5em;
-  background: #202020;
+  padding: 0.0em 1em;
   color: rgb(194, 194, 194);
-  
 }
 
 .posts .post-excerpt
@@ -309,7 +326,6 @@ a.darken:hover img
   margin-right: 2em;
   font-size: 13px;
   
-  background: #2d2d2d;
   color: #999;
   padding: 1em 1em;
 }
@@ -593,70 +609,6 @@ a.darken:hover img
 .highlight .vi { color: #008080 } /* Name.Variable.Instance */
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
 
-
-/* media queries */
-/* ----------------------------------------------------------*/
-
-@media screen and (max-width: 39.5em) {
-
-  .footer-col-1 { width: 50%; }
-
-  .footer-col-2 {
-    width: 45%; /*fallback*/
-    width: -webkit-calc(50% - 10px);
-    width: -moz-calc(50% - 10px);
-    width: -o-calc(50% - 10px);
-    width: calc(50% - 10px);
-    margin-right: 0;
-  }
-
-  .site-footer .column.footer-col-3 {
-    width: auto;
-    float: none;
-    clear: both;
-  }
-
-  .wrap { padding: 0 12px; }
-
-  .site-nav {
-    position: fixed;
-    z-index: 10;
-    top: 14px; right: 8px;
-    background-color: #2f2f2f;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    border: 2px solid #161616;
-  }
-
-  .site-nav .menu-icon {
-    display: block;
-    font-size: 24px;
-    color: #505050;
-    float: right;
-    width: 36px;
-    text-align: center;
-    line-height: 36px;
-  }
-
-  .site-nav .menu-icon svg { width: 18px; height: 16px; }
-
-  .site-nav .trigger {
-    clear: both;
-    margin-bottom: 5px;
-    display: none;
-  }
-
-  .site-nav:hover .trigger { display: block; }
-
-  .site-nav .page-link {
-    display: block;
-    text-align: right;
-    line-height: 1.25;
-    padding: 5px 10px;
-    margin: 0;
-    font-family: 'Source Sans Pro', sans-serif;
-  }
 
   .post-header h1 { font-size: 36px; }
   .post-content h2 { font-size: 28px; }
