--- a/css/main.css
+++ b/css/main.css
@@ -339,15 +339,17 @@ a.darken:hover img
 /* Post styles */
 /* ----------------------------------------------------------*/
 
-.post-header { margin: 10px 0 30px; }
+.post-header
+{
+  margin: 10px 0 30px;
+  text-align: center;
+}
 
 .post-header h1 {
   font-size: 42px;
   letter-spacing: -1.75px;
   line-height: 1;
   font-weight: 300;
-  background-color: #242424;
-  padding: 0.125em;
 }
 
 .post-header .meta {
@@ -369,14 +371,14 @@ a.darken:hover img
 .post-content h6 {
   line-height: 1;
   font-weight: 300;
-  margin: 40px 0 20px;
-  background-color: #1c1c1c;
-  padding: 0.125em;
 }
+
+
 
 .post-content h1{
   font-size: 40px;
-  letter-spacing: -1.50px; 
+  letter-spacing: -1.50px;
+  text-align: center;
 }
 
 .post-content h2 {
@@ -404,6 +406,15 @@ a.darken:hover img
   font-style: italic;
   margin: 30px 0;
 }
+
+.post-header h1 { font-size: 22px; }
+.post-content h1 { font-size: 20px; }
+.post-content h2 { font-size: 18px; }
+.post-content h3 { font-size: 16px; }
+.post-content h4 { font-size: 14px; }
+.post-content blockquote { padding-left: 10px; }
+.post-content ul,
+.post-content ol { padding-left: 10px; }
 
 .post-content ul,
 .post-content ol { padding-left: 20px; }
@@ -610,13 +621,7 @@ a.darken:hover img
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
 
 
-  .post-header h1 { font-size: 36px; }
-  .post-content h2 { font-size: 28px; }
-  .post-content h3 { font-size: 22px; }
-  .post-content h4 { font-size: 18px; }
-  .post-content blockquote { padding-left: 10px; }
-  .post-content ul,
-  .post-content ol { padding-left: 10px; }
+
 
   .site-footer .column {
     float: none;
