Fix favicon and post page title

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{% if page.tagline %}{{ page.tagline }}{% elsif page.title %}{{ page.excerpt | remove: '<p>' | remove: '</p>' | truncatewords: 15 | strip_html }}{% else %}{{site.description}}{% endif %}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <meta name="theme-color" content="#0e0e0e">
 
     <!--Twitter Cards-->
     <!--Summary Card-->
