--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
         <ul>
           {% assign navpages = site.pages | sort: 'navbarid' %}
           {% for page in navpages %}
-            {% if page.title and page.navbarid %}<li><a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>{% endif %}
+            {% if page.navbarid %}<li><a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.navbartitle | default:page.title }}</a></li>{% endif %}
           {% endfor %}
         </ul>
       </div>
