--- a/css/main.css
+++ b/css/main.css
@@ -489,6 +489,7 @@ a.darken:hover img
   position: relative;
   display: block;
   float: left;
+  box-shadow: 0px 0.3em 0.5em #000000;
 }
 
 .projects p
@@ -531,7 +532,13 @@ a.darken:hover img
 
 .project-showcase li
 {
-  list-style-type: none 
+  list-style-type: none;
+  margin-bottom: 0.4em;
+}
+
+.project-showcase li:last-child
+{
+  margin-bottom: unset;
 }
 
 .project-showtable td 
