Add support for Facebook meta tags

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,13 +9,20 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <meta name="theme-color" content="#0e0e0e">
 
+    <!--Facebook-->
+    <!--Basic Metadata-->
+    <meta property="og:url"         content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}"/>
+    <meta property="og:title"       content="{% if page.title %}{{ page.title }}{% else %}Terry Nguyen | {{ site.title }}{% endif %}"/>
+    <meta property="og:description" content="{% if page.tagline %}{{ page.tagline }}{% elsif page.title %}{{ page.excerpt | remove: '<p>' | remove: '</p>' | truncatewords: 15 | strip_html }}{% else %}{{site.description}}{% endif %}"/>
+    <meta property="og:bigimage"    content="{{ page.bigimage | prepend: site.baseurl | prepend: site.url }}"/>
+
     <!--Twitter Cards-->
     <!--Summary Card-->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@terrehbyte">
     <meta name="twitter:creator" content="@{{ author.twitter }}">
     <meta name="twitter:title" content="{% if page.title %}{{ page.title }} | {{ site.title }}{% else %}Terry Nguyen | {{ site.title }}{% endif %}">
-    <meta name="twitter:description" content="{{ page.excerpt | strip_html | truncatewords: 50 }}">
+    <meta name="twitter:description" content="{% if page.tagline %}{{ page.tagline }}{% elsif page.title %}{{ page.excerpt | remove: '<p>' | remove: '</p>' | truncatewords: 15 | strip_html }}{% else %}{{site.description}}{% endif %}">
     <meta name="twitter:image:src" content="{{ page.bigimage | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- Custom CSS -->
