--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,4 @@
-{% assign author = site.authors[page.author] %}
-
+{%- assign author = site.authors[page.author] -%}
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
