--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,23 +1,18 @@
 <header class="site-header">
-
   <div class="wrap">
-
     <!--Can someone tell me why "{{ site.baseurl }}/" works vs. "{{ site.baseurl }}"? !-->
     <a href="{{ site.baseurl }}/">
       <img id="headerlogo" src="{{ site.baseurl}}/images/hp.png"/>
     </a>
-
     <nav class="site-nav">
       <div class="trigger">
         <ul>
           {% assign navpages = site.pages | sort: 'navbarid' %}
-          {% for page in navpages %}
-            {% if page.navbarid %}<li><a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.navbartitle | default:page.title }}</a></li>{% endif %}
-          {% endfor %}
+          {%- for page in navpages %}
+            {%- if page.navbarid %}<li><a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.navbartitle | default:page.title }}</a></li>{% endif -%}
+          {% endfor -%}
         </ul>
       </div>
     </nav>
-
   </div>
-
 </header>
