Properly encase post name in quotes

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -87,7 +87,7 @@
         "url": "{{ author.url }}"
       },
       "headline": "{{ page.title }}",
-      "name": {{ page.title }},
+      "name": "{{ page.title }}",
       {%- if page.bigimage %}
       "image": "{{ page.bigimage | prepend: site.url | prepend: site.baseurl }}",
       {% endif -%}
