Fix fail cases for structured data

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -92,7 +92,7 @@
       "image": "{{ page.bigimage | prepend: site.url | prepend: site.baseurl }}",
       {% endif -%}
       "description": "{{ page.tagline }}",
-      "mainEntityOfPage": "{{ page.url | prepend: site.url | prepend: site.baseurl}}"
+      "mainEntityOfPage": "{{ page.url | prepend: site.url | prepend: site.baseurl}}",
       "wordCount": "{{ page.content | number_of_words }}"
     }
     </script>
