--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,11 +14,12 @@ layout: default
   {{ content }}
   </article>
 
+  {% if site.env == 'production' and site.disqus_short_name != nil %}
   <div class="post-comments">
     <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'terrehbyte'; // required: replace example with your forum shortname
+        var disqus_shortname = '{{ site.disqus_short_name }}'; // required: replace example with your forum shortname
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
@@ -29,5 +30,6 @@ layout: default
     </script>
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
   </div>
+  {% endif %}
 
 </div>
